@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.69 2000-08-03 01:30:54 macgyver Exp $
+$Id: NEWS,v 1.70 2000-08-03 02:46:44 macgyver Exp $
 
 1.2.0 - Released: 08/??/2000
 ----------------------------
@@ -16,6 +16,7 @@ $Id: NEWS,v 1.69 2000-08-03 01:30:54 macgyver Exp $
 - Added --with-libraries option to configure.
 - On systems with wtmpx, don't use wtmp at all.
 - Handle files that begin with ~ properly.
+- ProFTPD will now use the jail() system call, if available for better security.
 
 1.2.0RC2 - Released: 07/28/2000
 -------------------------------
